# swagger/definitions.yml
@@ -59,3 +59,31 @@ definitions:
         type: "String"
         example: "리뷰 내용"
 # -------------------------------------------------------------------------------------------------------------------- #
+
+  userSignUp:
+    type: "Object"
+    properties:
+      username:
+        type: "String"
+        example: "로그인 아이디"
+      name:
+        type: "String"
+        example: "유저 이름"
+      password:
+        type: "String"
+        example: "비밀번호"
+      authLevel:
+        type: "Number"
+        example: "1: 유저, 9: 관리자"
+  userSignIn:
+    type: "Object"
+    properties:
+      username:
+        type: "String"
+        example: "로그인 아이디"
+      password:
+        type: "String"
+        example: "비밀번호"
+      authLevel:
+        type: "Number"
+        example: "1: 유저, 9: 관리자"
